# HELIUM

./: .gitignore  CMakeLists.txt  README.md
Archives/LLVM/: lexer.cpp
LLVM/: parser.cpp
helium-opt/: CMakeLists.txt  helium-opt.cpp
include/: CMakeLists.txt  lexer.h  token.h
include/helium/: CMakeLists.txt  HeliumDialect.h  HeliumDialect.td  HeliumOps.h  HeliumOps.td  HeliumPasses.h  ShapeInferenceOpInterface.hpp  ShapeInferenceOpInterface.td
lib/: CMakeLists.txt  HeliumOps.cpp  LowerToAffine.cpp  LowerToLLVM.cpp  ShapeInferenceOpInterface.cpp
src/: lexer.cpp  token.cpp
test/: CMakeLists.txt
test/helium/: main.mlir  print.mlir
tests/: lexer_test.cpp
